--- a/front-end/src/styles/rules.css
+++ b/front-end/src/styles/rules.css
@@ -1,5 +1,5 @@
 .rules {
-    background: rgba(230 171 34 / 10%) !important;
+    background: rgb(230 171 34 / 10%) !important;
     border: 2px solid #f3b712 !important;
     grid-area: rules;
 }
